@@ -2,7 +2,9 @@ package org.vineflower.kotlin.struct;
 
 import kotlinx.metadata.internal.metadata.ProtoBuf;
 import kotlinx.metadata.internal.metadata.jvm.JvmProtoBuf;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.jetbrains.java.decompiler.code.CodeConstants;
 import org.jetbrains.java.decompiler.main.ClassesProcessor;
 import org.jetbrains.java.decompiler.main.DecompilerContext;
 import org.jetbrains.java.decompiler.main.extern.IFernflowerLogger;
@@ -26,53 +28,21 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
-public class KFunction {
-  public final String name;
-  public final ProtobufFlags.Function flags;
-  public final List<KType> contextReceiverTypes;
-  public final KParameter[] parameters;
-  public final List<KTypeParameter> typeParameters;
-  public final KType returnType;
-
-  public final MethodWrapper method;
-
-  @Nullable
-  public final KType receiverType;
-
-  @Nullable
-  public final KContract contract;
-
-  public final boolean knownOverride;
-
-  private final ClassesProcessor.ClassNode node;
-
-  private KFunction(
-    String name,
-    KParameter[] parameters,
-    List<KTypeParameter> typeParameters,
-    KType returnType,
-    ProtobufFlags.Function flags,
-    List<KType> contextReceiverTypes, MethodWrapper method,
-    @Nullable KType receiverType,
-    @Nullable KContract contract,
-    boolean knownOverride,
-    ClassesProcessor.ClassNode node) {
-    this.name = name;
-    this.parameters = parameters;
-    this.typeParameters = typeParameters;
-    this.returnType = returnType;
-    this.flags = flags;
-    this.contextReceiverTypes = contextReceiverTypes;
-    this.method = method;
-    this.receiverType = receiverType;
-    this.contract = contract;
-    this.knownOverride = knownOverride;
-    this.node = node;
-  }
-
+public record KFunction(
+  String name,
+  KParameter[] parameters,
+  List<KTypeParameter> typeParameters,
+  KType returnType,
+  ProtobufFlags.Function flags,
+  List<KType> contextReceiverTypes, MethodWrapper method,
+  @Nullable KType receiverType,
+  @Nullable KContract contract,
+  boolean knownOverride,
+  @NotNull DefaultArgsMap defaultArgs,
+  ClassesProcessor.ClassNode node
+) {
   public static Map<StructMethod, KFunction> parse(ClassesProcessor.ClassNode node) {
     MetadataNameResolver resolver = KotlinDecompilationContext.getNameResolver();
     ClassWrapper wrapper = node.getWrapper();
@@ -83,23 +53,12 @@ public class KFunction {
     KotlinDecompilationContext.KotlinType type = KotlinDecompilationContext.getCurrentType();
     if (type == null) return Map.of();
 
-    switch (type) {
-      case CLASS:
-        protoFunctions = KotlinDecompilationContext.getCurrentClass().getFunctionList();
-        break;
-      case FILE:
-        protoFunctions = KotlinDecompilationContext.getFilePackage().getFunctionList();
-        break;
-      case MULTIFILE_CLASS:
-        protoFunctions = KotlinDecompilationContext.getMultifilePackage().getFunctionList();
-        break;
-      case SYNTHETIC_CLASS:
-        // indicating lambdas and such
-        protoFunctions = Collections.singletonList(KotlinDecompilationContext.getSyntheticClass());
-        break;
-      default:
-        throw new IllegalStateException("Unexpected value: " + type);
-    }
+    protoFunctions = switch (type) {
+      case CLASS -> KotlinDecompilationContext.getCurrentClass().getFunctionList();
+      case FILE -> KotlinDecompilationContext.getFilePackage().getFunctionList();
+      case MULTIFILE_CLASS -> KotlinDecompilationContext.getMultifilePackage().getFunctionList();
+      case SYNTHETIC_CLASS -> Collections.singletonList(KotlinDecompilationContext.getSyntheticClass()); // Lambdas and similar
+    };
 
     Map<StructMethod, KFunction> functions = new HashMap<>(protoFunctions.size(), 1f);
 
@@ -142,10 +101,9 @@ public class KFunction {
         }
 
         for (KParameter parameter : parameters) {
-          desc.append(parameter.type);
+          desc.append(parameter.type());
         }
 
-        int endOfParams = desc.length();
         desc.append(")").append(returnType);
 
         method = wrapper.getMethodWrapper(lookupName, desc.toString());
@@ -163,6 +121,35 @@ public class KFunction {
         .map(ctxType -> KType.from(ctxType, resolver))
         .collect(Collectors.toList());
 
+      boolean isStatic = (method.methodStruct.getAccessFlags() & CodeConstants.ACC_STATIC) != 0;
+      String defaultArgsName = name + "$default";
+      StringBuilder defaultArgsDesc = new StringBuilder("(");
+      if (!isStatic) {
+        defaultArgsDesc.append("L").append(struct.qualifiedName).append(";");
+      }
+      if (receiverType != null) {
+        defaultArgsDesc.append(receiverType);
+      }
+      for (KParameter parameter : parameters) {
+        if (parameter.type().typeParameterName != null) {
+          typeParameters.stream()
+            .filter(typeParameter -> typeParameter.name().equals(parameter.type().typeParameterName))
+            .findAny()
+            .map(KTypeParameter::upperBounds)
+            .filter(bounds -> bounds.size() == 1)
+            .map(bounds -> bounds.get(0))
+            .ifPresentOrElse(defaultArgsDesc::append, () -> defaultArgsDesc.append("Ljava/lang/Object;"));
+        } else {
+          defaultArgsDesc.append(parameter.type());
+        }
+      }
+
+      defaultArgsDesc.append("I".repeat(parameters.length / 32 + 1));
+      defaultArgsDesc.append("Ljava/lang/Object;)");
+      defaultArgsDesc.append(returnType);
+
+      DefaultArgsMap defaultArgs = DefaultArgsMap.from(wrapper.getMethodWrapper(defaultArgsName, defaultArgsDesc.toString()), method, parameters);
+
       boolean knownOverride = flags.visibility != ProtoBuf.Visibility.PRIVATE
         && flags.visibility != ProtoBuf.Visibility.PRIVATE_TO_THIS
         && flags.visibility != ProtoBuf.Visibility.LOCAL
@@ -170,7 +157,22 @@ public class KFunction {
 
       KContract contract = function.hasContract() ? KContract.from(function.getContract(), List.of(parameters), resolver) : null;
 
-      functions.put(method.methodStruct, new KFunction(name, parameters, typeParameters, returnType, flags, contextReceiverTypes, method, receiverType, contract, knownOverride, node));
+      KFunction kFunction = new KFunction(
+        name,
+        parameters,
+        typeParameters,
+        returnType,
+        flags,
+        contextReceiverTypes,
+        method,
+        receiverType,
+        contract,
+        knownOverride,
+        defaultArgs,
+        node
+      );
+
+      functions.put(method.methodStruct, kFunction);
     }
 
     return functions;
@@ -180,6 +182,8 @@ public class KFunction {
     TextBuffer buf = new TextBuffer();
     KotlinWriter.appendAnnotations(buf, indent, method.methodStruct, TypeAnnotation.METHOD_RETURN_TYPE);
     KotlinWriter.appendJvmAnnotations(buf, indent, method.methodStruct, false, method.classStruct.getPool(), TypeAnnotation.METHOD_RETURN_TYPE);
+
+    String methodKey = InterpreterUtil.makeUniqueKey(method.methodStruct.getName(), method.methodStruct.getDescriptor());
 
     buf.appendIndent(indent);
 
@@ -243,11 +247,8 @@ public class KFunction {
     buf.append("fun ");
 
     List<KTypeParameter> complexTypeParams = typeParameters.stream()
-      .filter(typeParameter -> typeParameter.upperBounds.size() > 1)
-      .collect(Collectors.toList());
-
-    Map<Integer, KTypeParameter> typeParamsById = typeParameters.stream()
-      .collect(Collectors.toMap(typeParameter -> typeParameter.id, Function.identity()));
+      .filter(typeParameter -> typeParameter.upperBounds().size() > 1)
+      .toList();
 
     if (!typeParameters.isEmpty()) {
       buf.append('<');
@@ -255,14 +256,14 @@ public class KFunction {
       for (int i = 0; i < typeParameters.size(); i++) {
         KTypeParameter typeParameter = typeParameters.get(i);
 
-        if (typeParameter.reified) {
+        if (typeParameter.reified()) {
           buf.append("reified ");
         }
 
-        buf.append(KotlinWriter.toValidKotlinIdentifier(typeParameter.name));
+        buf.append(KotlinWriter.toValidKotlinIdentifier(typeParameter.name()));
 
-        if (typeParameter.upperBounds.size() == 1) {
-          buf.append(" : ").append(typeParameter.upperBounds.get(0).stringify(indent + 1));
+        if (typeParameter.upperBounds().size() == 1) {
+          buf.append(" : ").append(typeParameter.upperBounds().get(0).stringify(indent + 1));
         }
 
         if (i < typeParameters.size() - 1) {
@@ -301,6 +302,9 @@ public class KFunction {
       first = false;
 
       parameter.stringify(indent + 1, buf);
+      if (parameter.flags().declaresDefault) {
+        buf.append(defaultArgs.toJava(parameter, indent + 1), node.classStruct.qualifiedName, methodKey);
+      }
     }
 
     buf.appendPossibleNewline("", true)
@@ -321,12 +325,12 @@ public class KFunction {
 
       first = true;
       for (KTypeParameter typeParameter : complexTypeParams) {
-        for (KType upperBound : typeParameter.upperBounds) {
+        for (KType upperBound : typeParameter.upperBounds()) {
           if (!first) {
             buf.appendPossibleNewline(",").appendPossibleNewline(" ");
           }
 
-          buf.append(KotlinWriter.toValidKotlinIdentifier(typeParameter.name))
+          buf.append(KotlinWriter.toValidKotlinIdentifier(typeParameter.name()))
             .append(" : ")
             .append(upperBound.stringify(indent + 1));
 
@@ -353,7 +357,7 @@ public class KFunction {
           buf.appendLineSeparator();
         }
 
-        buf.append(body, node.classStruct.qualifiedName, InterpreterUtil.makeUniqueKey(method.methodStruct.getName(), method.methodStruct.getDescriptor()));
+        buf.append(body, node.classStruct.qualifiedName, methodKey);
       } catch (Throwable t) {
         String message = "Method " + method.methodStruct.getName() + " " + method.desc() + " in class " + node.classStruct.qualifiedName + " couldn't be written.";
         DecompilerContext.getLogger().writeMessage(message, IFernflowerLogger.Severity.WARN, t);
